:heavy_plus_sign: Added new REST API endopint /system/ping.
